# federal-llm-blueprint

./: .checkov.yaml  .gitignore  .terraform-docs.yml  .tflint.hcl  CHANGELOG.md  CONTRIBUTING.md  CONTROLS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: airgap-guide.md  architecture.md  audit-correlation.md  controls.yaml  conventions.md  costs.md  rbac-model.md  secrets-handling.md  threat-model.md
docs/adr/: 001-ecs-fargate-over-eks.md  002-state-strategy.md  003-no-egress-as-mode-not-fork.md  004-secrets-pattern-not-module.md  005-config-injection-via-ssm.md  006-pgvector-over-opensearch.md  007-prompt-capture-posture.md
docs/oscal/: component-definition.json
docs/plan/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md
docs/verification/: audit-walkthrough.md  full-stack-proof.md  gateway-proof.md  no-egress-proof.md  vector-proof.md
examples/full-stack/: .terraform.lock.hcl  README.md  litellm.yaml.tpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
examples/minimal/: .terraform.lock.hcl  README.md  litellm.yaml.tpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
modules/audit/: README.md  main.tf  outputs.tf  variables.tf
modules/document-store/: README.md  main.tf  outputs.tf  (+1 more)
policies/: README.md
scripts/: README.md  check-control-refs.py  generate-oscal.py  seed-vectors.py  verify-teardown.sh
(+60 files in other folders)
