[project]
name = "federal-llm-blueprint"
version = "1.0.0"
description = "Helper tooling for the federal-llm-blueprint Terraform reference architecture"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[tool.uv]
package = false
# checkov caps aiohttp <3.14, which carries 11 patched advisories; 3.14 is API-compatible for checkov's usage (verified by a full `make checkov` run)
override-dependencies = ["aiohttp>=3.14.1"]

[dependency-groups]
dev = [
    "checkov==3.3.6",
    "aiohttp>=3.14.1",
]
